# jester-jr

./: .gitignore  Cargo.toml  HOWTO.md  README.md  backend_server.py  clear_blacklist.sh  create_test_jwt.sh  curl_tests.sh  curl_tests_safe.sh  example-with-tls-blacklisting.toml  example-with-validators.toml  final_test.py  generate_certs.sh  generate_jwt.py  jester-jr.toml  legacy-config.toml  quick_test.sh  reset_and_test.sh  simple_test.sh  test-config-aligned.toml  test-config.toml  test-jester-jr.toml  test-safe-config.toml  test_backend_server.py  test_jester_jr.sh  test_tls.sh  tests.sh  working-test.toml
docs/: CONFIG_FILTERING.md  EXTENSIONS.md  Extension-Impl.md  Extensions-TODO.md  IMPLEMENTATION_INSTRUCTIONS_FOR_CLAUDE_CODE.md  MULTI_LISTENER_CONFIG_DESIGN.md  ROADMAP.md  SUMMARY.md  TLS_QUICK_REF.md  TLS_READER_DEBUGGING.md  TLS_STREAM_MISMATCH_FIX.md  USAGE.md
examples/: file-based-api-validator-config.toml
examples/file-based-api-validator/: Cargo.toml
examples/file-based-api-validator/src/: lib.rs
examples/simple-api-validator/: Cargo.toml
examples/simple-api-validator/src/: lib.rs
scripts/: generate_config.py
src/: blacklist.rs  main.rs  tls_failure_tracker.rs
src/config/: config.rs  mod.rs
src/parsers/: mod.rs  request.rs  response.rs
src/routing/: mod.rs
src/tls/: mod.rs
src/validators/: context.rs  mod.rs  registry.rs  result.rs  traits.rs
src/validators/builtin/: api_key.rs  jester_secret.rs  jwt.rs  mod.rs
src/validators/script/: executor.rs  mod.rs
src/validators/wasm/: loader.rs  mod.rs  runtime.rs
validators/: master_keys.txt  simple_api_validator.wasm
validators/examples/: header_check.rhai  simple_api_key.rhai
validators/sdk/: Cargo.toml
validators/sdk/src/: lib.rs
