[package]
name = "jester-jr"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
regex = "1.10"

# TLS/SSL support
rustls = "0.23"
rustls-pemfile = "2.1"

[dev-dependencies]
tempfile = "3.8"  # For testing certificate loading
