[package]
name = "jester-jr"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Existing dependencies
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# TLS/SSL support
rustls = "0.23"
rustls-pemfile = "2.1"

# NEW: Validator framework dependencies
rhai = { version = "1.19", features = ["sync", "serde"] }  # Scripting engine
wasmtime = "27.0"                                           # WASM runtime
serde_json = "1.0"                                          # JSON serialization
async-trait = "0.1"                                         # Async trait support
parking_lot = "0.12"                                        # Better RwLock for shared state
tokio = { version = "1.0", features = ["rt", "macros"] }   # Async runtime for script execution

# NEW: Built-in validator dependencies
jsonwebtoken = "9.3"                                        # JWT validation
base64 = "0.22"                                             # Base64 encoding/decoding
chrono = "0.4"                                              # Time handling

[dev-dependencies]
tempfile = "3.8"  # For testing certificate loading
mockito = "1.5"   # HTTP mocking for tests

[workspace]
members = [
    ".",
    "validators/sdk",           # WASM validator SDK
]
