[package]
name = "file-based-api-validator"
version = "0.1.0"
edition = "2024"
description = "WASM validator that checks API keys against a master keys list"

[workspace]
# Empty workspace table to exclude from parent workspace

[lib]
crate-type = ["cdylib"]

[dependencies]
jester-jr-validator-sdk = { path = "../../validators/sdk" }
serde_json = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols